--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^2.11.0",
+    "@sanity/image-url": "^0.140.22",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
